working on responsivness

--- a/index.html
+++ b/index.html
@@ -81,17 +81,20 @@
 
       </div>
       <div class="antwerp__based">
-        <img src="./src/assets/svg/dashed-line.svg" alt="path">
+        <img class="dashed__line" src="./src/assets/svg/dashed-line.svg" alt="path">
         <img class="map" src="./src/assets/svg/map.svg" alt="silhouette of Antwerp" width="70%">
+        <img class="dashed__line-two hide__temp" src="./src/assets/svg/dashed-line-two.svg">
         <p class="antwerp">Antwerp</p>
       </div>
       <div class="about__text">
-        <p>He lived through the <strong>Protestant Reformation</strong>, a time of religious conflict between Catholics
+        <p class="bckgrnd">He lived through the <strong>Protestant Reformation</strong>, a time of religious conflict
+          between Catholics
           and Protestants, when
           censorship was common. Despite these challenges, he built a <strong>successful printing empire</strong> and
           left a lasting mark on
           history.</p>
-        <p class="narrow__left">Plantin’s success was built on more than just <strong>strategy</strong>, it was also
+        <p class="narrow__left bckgrnd">Plantin’s success was built on more than just <strong>strategy</strong>, it was
+          also
           about
           <strong>craftsmanship</strong>.
         </p>
@@ -160,7 +163,7 @@
         </div>
       </div>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
     <section class="quality" id="quality">
@@ -174,13 +177,16 @@
         ./src/assets/img/abook_1219.avif 1219w,
         ./src/assets/img/abook_1290.avif 1290w" src="./src/assets/img/abook_1290.avif" alt="a perfect book">
       </picture>
-      <p>Many printers rushed to <strong>produce large quantities</strong>, Plantin focused on <strong>quality</strong>,
+      <p class="desk__pos">Many printers rushed to <strong>produce large quantities</strong>, Plantin focused on
+        <strong>quality</strong>,
         ensuring that his books stood out in an
-        increasingly competitive market.</p>
+        increasingly competitive market.
+      </p>
       <p class="careful__process narrower">Printing a perfect book was
         <br>a <strong>careful process</strong>.
       </p>
-      <p class="no__padding">Each letter had to be set by hand, inked carefully, and pressed onto paper with absolute
+      <p class="no__padding new-narrow-left">Each letter had to be set by hand, inked carefully, and pressed onto paper
+        with absolute
         precision.
 
       <p>A <strong>single mistake</strong> could mean redoing an entire page, wasting time and expensive materials.</p>
@@ -242,7 +248,7 @@
       </div>
       <p class="instructions">Tap to rotate the letter,<br>drag and drop to set it</p>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
     <section class="high__standards">
@@ -319,7 +325,7 @@
         <button class="submit__button" type="submit">Check!</button>
       </form>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
     <section class="hustles" id="hustles">
@@ -405,7 +411,7 @@
       <button class="check hidden">Check!</button>
       <p class="feedback"></p>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
     <section class="risks">
@@ -455,28 +461,38 @@
         Non-doubles: You wouldn’t!
       </p>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100px">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
     <section class="protestants">
       <h3>Printing
         for protestants</h3>
-      <p class="centered">Plantin secretly printed books for Protestant customers despite the dangers posed by the
+      <p class="centered new-narrow">Plantin secretly printed books for Protestant customers despite the dangers posed
+        by the
         Catholic Church, which
         viewed
         Protestantism as a threat.</p>
-      <p>Demand for these books was high, as Protestants relied on hidden printing networks to access banned texts
-        like Bible
-        translations, sermons, and theological writings.</p>
-      <p>To avoid detection, Plantin disguised religious texts as scholarly works, used pseudonyms for authors, and
-        moved books
-        through secret trade routes.</p>
-      <p>Though he took great risks, Plantin’s success set him apart, with his books reaching Protestant communities
-        across Europe.</p>
-      <p>He skillfully maintained a working relationship with Catholic authorities, ensuring his business survived while
-        others
-        faced exile or financial ruin. His ability to navigate both sides allowed him to thrive in a time of religious
-        conflict.</p>
+      <div class="desktop__book">
+        <div class="small__book">
+          <p>Demand for these books was high, as Protestants relied on hidden printing networks to access banned texts
+            like Bible
+            translations, sermons, and theological writings.</p>
+          <p class="new-narrow-left">To avoid detection, Plantin disguised religious texts as scholarly works, used
+            pseudonyms for authors, and
+            moved books
+            through secret trade routes.</p>
+        </div>
+        <div>
+          <p>Though he took great risks, Plantin’s success set him apart, with his books reaching Protestant communities
+            across Europe.</p>
+          <p>He skillfully maintained a working relationship with Catholic authorities, ensuring his business survived
+            while
+            others
+            faced exile or financial ruin. His ability to navigate both sides allowed him to thrive in a time of
+            religious
+            conflict.</p>
+        </div>
+      </div>
     </section>
     <div class="right__lines">
       <div class="right__line"></div>
@@ -492,7 +508,8 @@
         him at risk with
         religious authorities.
       </p>
-      <p class="bckgrnd divine__will centered gold">The Church believed astrology interfered with faith and divine will,
+      <p class="bckgrnd divine__will centered gold new-narrow">The Church believed astrology interfered with faith and
+        divine will,
       </p>
       <p class="bckgrnd star__para__two">many religious leaders accused astrologers and their publishers of
         <strong>misleading people</strong>. If
@@ -501,7 +518,8 @@
         <strong>keep his business
           successful</strong>.
       </p>
-      <p>These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>, and even
+      <p class="bckgrnd">These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>,
+        and even
         <strong>predicting the future</strong>. While some saw them as
         <strong>dangerous</strong>, Plantin knew they were in demand and printed them to meet public interest.
       </p>
@@ -517,7 +535,8 @@
         Plantin was a businessman
         who understood that <strong>sometimes, to make history, you have to focus on details, work hard and take
           risks</strong>.</p>
-      <p class="centered">By the time of his death in 1589, his <strong>legacy was secure</strong>. His press remained
+      <p class="centered new-narrow">By the time of his death in 1589, his <strong>legacy was secure</strong>. His press
+        remained
         <strong>in his
           family’s hands</strong>, ensuring that his
         name was remembered for generations.
@@ -533,7 +552,7 @@
       </div>
       <h2>the Museum</h2>
       <p class="highlight__name">Plantin-Moretus</p>
-      <p class="centered narrow">Visitors can explore his historic printing house at the</p>
+      <p class="centered narrow new-narrow">Visitors can explore his historic printing house at the</p>
       <p class="light__highlight centered">the Museum Plantin-Moretus</p>
       <p class="centered">in</p>
       <p class="light__highlight centered">Antwerp</p>
@@ -547,7 +566,7 @@
         </div>
       </div>
       <div class="bottom__corner">
-        <img src="./src/assets/svg/right-bot-corner.png" alt="corner decoration" width="100">
+        <img src="./src/assets/svg/right-bot-corner.svg" alt="corner decoration" width="35%">
       </div>
     </section>
   </main>
@@ -566,7 +585,7 @@
     <nav>
       <ul class="footer__nav">
         <li><a href="">Plan your visit</a></li>
-        <li> <a href="">What to see?</a></li>
+        <li> <a class="footer__nav__sec" href="">What to see?</a></li>
         <li> <a href="">About us</a></li>
       </ul>
     </nav>
@@ -574,22 +593,28 @@
       <p>Stay in touch</p>
       <div class="social__icons">
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-fb.svg" alt="Facebook icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-fb.svg" alt="Facebook icon"
+              width="50%"></a>
         </div>
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-insta.svg" alt="Instagram icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-insta.svg" alt="Instagram icon"
+              width="50%"></a>
         </div>
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-pint.svg" alt="Pinterest icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-pint.svg" alt="Pinterest icon"
+              width="50%"></a>
         </div>
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-yt.svg" alt="Youtube icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-yt.svg" alt="Youtube icon"
+              width="50%"></a>
         </div>
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-sound.svg" alt="Soundcloud icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-sound.svg" alt="Soundcloud icon"
+              width="50%"></a>
         </div>
         <div class="social__icon">
-          <a href=""><img class="icon" src="./src/assets/svg/social-trip.svg" alt="Tripadvisor icon" width="50%"></a>
+          <a class="icon__link" href=""><img class="icon" src="./src/assets/svg/social-trip.svg" alt="Tripadvisor icon"
+              width="50%"></a>
         </div>
       </div>
     </div>
