--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
           <p><strong class="special__strong gold">France</strong></p>
           <p>later based in</p>
         </div>
-
       </div>
       <div class="antwerp__based">
         <img class="dashed__line" src="./src/assets/svg/dashed-line.svg" alt="path">
@@ -253,6 +252,8 @@
     </section>
     <section class="high__standards">
       <div class="standards__intro">
+        <div class="desktop__line-left"></div>
+        <div class="desktop__line-right"></div>
         <h3>High standards</h3>
         <p>To maintain his high standards, Plantin hired the most skilled typesetters and invested in the best
           materials like fine paper, durable ink and high-quality metal typefaces.
@@ -267,7 +268,7 @@
           meticulous approach earned him commissions from royalty, scholars, and the Catholic Church, making his
           <strong>reputation</strong> as one of
         </p>
-        <p class="highlight__name gold">Europe’s most respected printers.</p>
+        <p class="highlight__name gold">Europe’s most <br> respected printers.</p>
       </div>
     </section>
     <hr>
@@ -444,7 +445,7 @@
       <div class="half__line__right"></div>
       <p class="dangerous__description centered">He maintained good relations with Catholic authorities while still
         finding ways to print forbidden books</p>
-      <p class="dangerous gold centered">Playing a Dangerous Double Game.</p>
+      <p class="dangerous gold centered">Playing a Dangerous<br>Double Game.</p>
     </section>
     <section class="interaction dice__inter">
       <div class="top__corner">
@@ -518,7 +519,7 @@
         <strong>keep his business
           successful</strong>.
       </p>
-      <p class="bckgrnd">These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>,
+      <p class="bckgrnd last__para">These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>,
         and even
         <strong>predicting the future</strong>. While some saw them as
         <strong>dangerous</strong>, Plantin knew they were in demand and printed them to meet public interest.
