fixing hero image

--- a/index.html
+++ b/index.html
@@ -39,8 +39,18 @@
     <section>
       <div class="header">
         <p class="highlight__name">Christophe Plantin</p>
+        <picture>
+          <img sizes="(min-width: 1360px) 1192px, (min-width: 380px) 94.48vw, calc(73.33vw + 80px)" srcset="
+            ./src/assets/img/hero_200.avif 200w,
+            ./src/assets/img/hero_606.avif 606w,
+            ./src/assets/img/hero_896.avif 896w,
+            ./src/assets/img/hero_1136.avif 1136w,
+            ./src/assets/img/hero_1388.avif 1388w,
+            ./src/assets/img/hero_1652.avif 1652w,
+            ./src/assets/img/hero_1658.avif 1658w" src="./src/assets/img/hero_1658.avif" alt="portrait of Plantin">
+        </picture>
         <p class="the">The</p>
-        <h1> renaissance
+        <h1> renaissance<br>
           hustler</h1>
         <p class="cta__text">Experience His Legacy</p>
         <img class="cta" src="./src/assets/svg/arrow.svg" alt="arrow" width="20%">
@@ -519,7 +529,8 @@
         <strong>keep his business
           successful</strong>.
       </p>
-      <p class="bckgrnd last__para">These books provided guidance on <strong>farming</strong>, <strong>celestial events</strong>,
+      <p class="bckgrnd last__para">These books provided guidance on <strong>farming</strong>, <strong>celestial
+          events</strong>,
         and even
         <strong>predicting the future</strong>. While some saw them as
         <strong>dangerous</strong>, Plantin knew they were in demand and printed them to meet public interest.
