--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
         <p class="officiana__text narrow__left gold">Officina
           Plantiniana</p>
         <p class="about__oficina">Printing house founded in Antwerp in 1555</p>
-        <img class="transition__map" src="./src/assets/svg/map-two.svg" alt="silhouette of Antwerp" width="65%">
+        <!-- <img class="transition__map" src="./src/assets/svg/map-two.svg" alt="silhouette of Antwerp" width="65%"> -->
+        <svg class="transition__map" width="65%" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 773.39 1026.79">
+          <path
+            d="M765.06,684.34c-.85,2.83-5.75,4.34-6.35,9.6-.44,3.8,2.27,7.79.43,11.67-1.42,2.04-8.69.5-12.03,1.56-2.28.73-3.78,3.32-5.94,4.27-2.74,1.2-10.48,2.44-11.58,4.28-1.29,3.09-.12,6.44-.6,9.6-.3,1.97-2.49,3.33-2.29,5.66.29,3.26,5.21,4.37,4.66,13.7-.89,15.18-14.47,15.13-22.78,24.88l-4.42.64-.05,6.75h-12.47c-2.79,9.19,6.64,8.04,7.66,13.25,1.2,6.14-.23,12.39-.82,18.45l7.9,1.18c1.62,7.61-12.53,7.09-14.58,14.41-1.44,5.15,5.19,5.88,5.5,10.51l-8.43.09-.78-3.26c-5.22-.4-9.64-5.06-15.09-4.71-6.5.43-8.59,13.45-14.82,14.66-10.02,1.95-17.19-11.85-29.25-6.59-1.69.73-7.43,5.11-8.09,6.64-1.16,2.65-.21,5.52-.84,8.23-.25,1.1-5.45,13.86-5.9,14.5-2.22,3.16-5.71,3.22-8.54,5.06-5.17,3.38-2.66,7.11-9.67,1.62-10.86,3.8-.1,11.51-.51,16.42-.33,4-11.32,8.82-9.13,15.36-4.26-1.19-8.09-1.77-12.49-.59-5.91,1.57-6.99,7.83-11.38,10.14-4.04,2.13-10.37,2.27-14.61,5.8-6.08,5.05-1.98,11.03-3.68,16.72-.61,2.07-12.75,14.73-15.25,16.48-2.78,1.96-5.9,2.55-8.26,4.2-2.53,1.77-5.94,6.93-8.01,7.87-2.97,1.35-9.06-.1-10.02.76-.28.25-.46,2.91-1.75,4.45-2.52,3.02-8.39,3.06-8.36,8.24.36,3.73,8.78,7.26,4.32,11.54-1.78,1.7-13.04,4.63-13.5,5.18-.9,1.06,1.17,6.4-1.83,7.8-4.09-5.37-10.7-3.32-15.66-7.76-3.89.72-4.47,5.47-7.85,6.93-3.9,1.69-7.92.03-11.89,1.71-3.43,1.45-6.81,7.64-9.38,8.75-2.22.96-4.8.26-6.83,1.11-2.78,1.16-11.06,7.42-13,7.44-10.12-4.84-10.55-17.12-17.17-24.84-3.69-1.19-5.52,2.32-8.01,3.01-2.03.56-4.22.07-6.27.53-3.02.69-6.08,3.74-9.89,1.43-3.55-2.15-11.47-26.6-11.53-32.1-4.58-2.6-10.72-3.22-15.14-5.82-3.77-2.21-4.63-5.69-7.41-7.32-7.16-4.19-11.8-2.53-18.13-9.41-.62-.68-.44-2.69-1.32-3.44-1.96-1.68-8.27-1.13-10.91-1.56-.7-.42-2.25-11.99-2.41-14.03-2.88-37.08-5.41-75,10.35-109.77,2.28-5.04,11.01-18.43,15.73-20.61,4.8-2.22,6.57,6.14,11.3,6.27-.13-4.27-6.14-5.21-5.72-9.57,1.02-10.61,44.77-22.04,45.39-25.03-5.51-9.03-7.4-22.07-11.98-31.05-2.15-4.22-5.96-10.98-8.42-15.4-2.38-4.28-11.28-10.3-10.28-14.55.28-1.15,2.95-.66,3.51-3.54,2.01-10.45-2.06-12.38-5.18-19.82-2.38-5.66-5-11.62-7.34-17.59-2.71-6.89-3.64-12.52-3.89-19.96l-5.13-1.6c3.22-2.54,2.43-8.12,4.46-11.11.85-1.26,2.87-1.44,3.97-3.09,2.9-4.41-.68-6.84,8.51-5.68.32-9.16,11.23-14.42,17.44-20.27.96-.9,1.04-.78.72-2.35-6.4-3.03-15.83-6.87-21.45-10.85-15.14-10.75-24.26-26.14-43.11-36.23-21.26-11.37-43.67-11.1-64.59-19.27-13.56-5.3-12.62-13.68-11.41-27.22,2.34-26.1,40.46-55.32,53.77-76.57,5.04-8.05,3.54-25.39-2.13-32.8-17.47-22.79-66.13-37.56-92.01-53.05-16.07-9.62-21.69-22.65-28.12-39.89-10.87-29.13-2.22-63-4.06-93.44l3.48-2.88h-4.55c.08-8.84-2.47-17.69-5.09-26.07-2.78-8.9-6.73-16.12-9.88-24.69-1.12-.6-2.76-.51-3.71-1.34-19.02-16.6-39.57-31.87-60.73-45.85-24.04-15.89-48.02-22.69-60.2-50.88-4.81-11.14-6.85-25.04-11.08-36.54-.3-2.3.09-1.45,1.66-1.67,6.02-.83,13.99.32,20.41,0,1.93-.1,3.76-1.01,5.69-1.11,95.75-5.17,191.56-11.64,287.25-13.61l17.01,86.14c-.98,1-9.22-2.21-7.93,2.26,2.74-.18,5.73.4,8.44-.05,3.94-.66,22.46-6.72,23.85-6.72,1.2.01,5.93,2.83,9.19,3.24,10.42,1.32,22.24,1.49,32.75,2.4,1.19.1,4.91.62,5.17,1.83l-.67,3.82c-26.22,21.45-54.21,40.96-80.89,61.91-3.02,2.38-19.96,15.11-20.33,17.05-.43,2.25,6.56,9.78,8.55,10.37,5.55,1.65,12.99-1.52,18.89,1.51,1.86.96,19.41,18.73,20.24,20.57,5.04,11.23,4.67,32.94,9.14,45.26,1.95,5.4,8.58,8.67,10.14,12.53.99,2.44,2.17,9.37,3.01,12.87,1.02,4.25-12.3-1.5-11.22,3.84,16.03-3.25,17.55,6.76,26.81,15.69l102.36,56.86c.03-6.32,6.5-5.59,10.61-8.1,2.89-1.76,4.84-5.2,7.61-7.13,3.06-2.14,11.56-6.03,13.49-8.04,1.65-1.71,1.73-4.88,3.94-7.4,1.19-1.35,13.72-12.52,14.67-12.36,1.27.22,2.5,2.63,3.02,3.85,1.95,4.57,4.94,22.89,6.11,24.5,1.5,2.05,5.23.13,6.42,1.74,3.57,4.84,3.3,22.65,7.8,24.87,4.57,2.25,5.29-1.86,8.01-3.34,7.16-3.91,8.94,1.97,11.66,1.44,3.86-2.48,15.55-17.2,20.05-14.07l53.82,120.74.52,3.44-4.53,2.27c4.38-1.11,10.44,1.55,11.31,6.26.92,5.04,2.05,16.18,2.33,21.47.57,11.04-2.09,21.39.04,32.82,1.03,5.51,4.66,10.19,5.45,15.75-8.38,6.96-18.02,11.78-25.73,19.7.1,5.31-3.91,11.41-3.29,16.66.31,2.6,3.13,3.84,3.94,6.07,1.13,3.12,1.32,8.44.28,11.62,6.43-3.41,9.43,2.31,14.02,2.2,4.77-.1,9.93-4.76,14.82-4.41,4.27.3,10.66,6.36,16.06,6.71,5.48.36,13.41-2.51,18.13-3.02,7.77-.84,16.07,8.74,19.71,14.95-4.66,6.75-4.65,14.61-5.98,22.39-.5,2.97-2.91,2.95-.7,6.91,6.06,10.91,21.62-1.44,31.43.91,1.13.71,4.19,23.36,3.32,26.25Z"
+            fill="#F8BF7A" />
+        </svg>
         <img class="house__image" src="./src/assets/svg/printing-house.svg" alt="printing house" width="50px">
       </div>
     </section>
@@ -197,7 +202,6 @@
       <p class="no__padding new-narrow-left">Each letter had to be set by hand, inked carefully, and pressed onto paper
         with absolute
         precision.
-
       <p>A <strong>single mistake</strong> could mean redoing an entire page, wasting time and expensive materials.</p>
       <div class="reputation">
         <div class="half__line"></div>
@@ -278,10 +282,10 @@
           meticulous approach earned him commissions from royalty, scholars, and the Catholic Church, making his
           <strong>reputation</strong> as one of
         </p>
-        <p class="highlight__name gold">Europe’s most <br> respected printers.</p>
+        <p class="most highlight__name gold">Europe’s most <br> respected printers.</p>
       </div>
     </section>
-    <hr>
+    <hr class="top">
     <section class="polyglot">
       <p class="centered">One of his greatest achievements was</p>
       <h3 class="gold">Polyglot Bible</h3>
@@ -294,7 +298,7 @@
         and
         innovation.</p>
     </section>
-    <hr>
+    <hr class="bottom">
     <section class="interaction languages__inter">
       <div class="top__corner">
         <img src="./src/assets/svg/left-top-corner.svg" alt="corner decoration" width="35%">
@@ -631,6 +635,8 @@
       </div>
     </div>
   </footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script type="module" src="./src/scripts/main.js"></script>
 </body>
 
